# codeLab

./: README.md  debug.txt  molla1-40g.csv
calcolo/: CMakeLists.txt  arrayDati.cpp  dati.cpp  dati.h  function.cpp  main.cpp  makefile
calcolo/calcoloLib/: arrayDati.h  function.h
exeCalcolo/: prova1.csv
generazioneFileProva/: generaFunc.py  plotter.py  plottingDef.py
massimi/: Molla1_100g.csv  Molla1_60g.csv  Molla1_80g.csv  Molla1_solosupporto_1.csv  Molla2_100g_1.csv  Molla2_20g_1.csv  Molla2_20g_1425Hz_regime.csv  Molla2_20g_1437Hz_regime.csv  Molla2_20g_1465Hz_regime.csv  Molla2_20g_1504Hz_regime.csv  Molla2_20g_1517Hz_regime.csv  Molla2_20g_1524Hz_regime.csv  Molla2_20g_1534Hz_regime.csv  Molla2_20g_1543Hz_regime.csv  Molla2_20g_1550Hz_regime.csv  Molla2_20g_1565Hz_regime.csv  Molla2_20g_1618Hz_regime.csv  Molla2_40g_1.csv  Molla2_60g_1.csv  Molla2_80g_1.csv  Molla2_solosupporto.csv  molla1-40g.csv  molla2_20g_1512Hz_regime.csv
